WIP: Lyrics fetcher

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-# Runtime
+# Transcoder
 mutagen
 pillow
 pydub
 ruamel.yaml
 https://github.com/sio/hods/archive/master.zip
+
+# Goodies
+requests
+lxml
+cssselect
 
 # Development
 pylint
