--- a/sample_target.yml
+++ b/sample_target.yml
@@ -1,17 +1,17 @@
-name: Sansa Clip Zip
+name: Sansa Clip Zip  # required
 
-input:
+input:  # at least one directory is required
   - /home/user/music
   - /media/torrents/music
 
 output:
-  directory: /media/user/SANSA_SD
-  pattern: '{artist}/{year} - {album}/{number} - {title}'
-  format: vorbis  # or mp3, opus, aotuv
-  quality: q5
-  lossy_source: copy  # or allow_bad_transcodes for lossy-to-lossy
+  directory: /media/user/SANSA_SD  # required
+  pattern: '{artist}/{year} - {album}/{number} - {title}'  # optional
+  format: vorbis  # or mp3, opus, aotuv  # optional
+  quality: q5  # optional
+  lossy_source: copy  # or allow_bad_transcodes for lossy-to-lossy  # optional  # TODO: skip
 
 extras:
-  lyrics: /path/to/lyrics/database-or-directory
-  cover: 96  # pixels
+  lyrics: /path/to/lyrics/database-or-directory  # optional
+  cover: 96  # pixels  # optional
   # TODO: support blacklist / whitelist for targets
